--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ Hangman
 </head>
 <body>
     <h1>spille hagmana samegilli!</h1>
-    <p id="demo">Dette er en enkel nettside med JavaScript.</p>
+    <p id="demo">Da lea souhtats neahttasidu gos sahtat speallat hangmana!.</p>
     <button onclick="changeText()">deadel mu!</button>
 
     <script src="script.js"></script>
