--- a/index.html
+++ b/index.html
@@ -36,13 +36,11 @@
 <body>
     <h1>Spille Hagmana Samegilli!</h1>
     <p id="demo">Da lea souhtats neahttasidu gos sahtat speallat hangmana!.</p>
-    <button onclick="changeText()">Deadel mu!</button>
+    <button onclick="changeText()">alge spillet!</button>
 
     <!-- JavaScript direkte før </body> -->
     <script>
-        function changeText() {
-            document.getElementById("demo").innerHTML = "Takk for at du klikket!";
-        }
+
     </script>
 </body>
 </html>
@@ -63,8 +61,7 @@ const galgeStadier = [
            |
            |
     _______|__
-    `,
-    `
+   
        -----
        |   |
        O   |
@@ -72,8 +69,7 @@ const galgeStadier = [
            |
            |
     _______|__
-    `,
-    `
+    
        -----
        |   |
        O   |
@@ -81,8 +77,7 @@ const galgeStadier = [
            |
            |
     _______|__
-    `,
-    `
+  
        -----
        |   |
        O   |
@@ -90,31 +85,28 @@ const galgeStadier = [
            |
            |
     _______|__
-    `,
-    `
+   
        -----
        |   |
        O   |
-      /|\\  |
+      /|\  |
            |
            |
     _______|__
-    `,
-    `
+ 
        -----
        |   |
        O   |
-      /|\\  |
+      /|\  |
       /    |
            |
     _______|__
-    `,
-    `
+    
        -----
        |   |
        O   |
-      /|\\  |
-      / \\  |
+      /|\  |
+      / \  |
            |
     _______|__
     `
@@ -170,4 +162,3 @@ function sjekkVinner() {
 
 // Start spillet
 visSpillet();
-
