--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
 
     <!-- JavaScript direkte før </body> -->
     <script>
+        <button onclick="clearPage()">Tøm siden</button>
+
+    <script>
+        function clearPage() {
+            // Tømmer alt innhold på siden
+            document.body.innerHTML = "";
+        }
 
     </script>
 </body>
